# skills-getting-started-with-github-copilot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test-uv.yml
src/: README.md
