[project]
name = "mergington-high-school-api"
version = "1.0.0"
description = "A super simple FastAPI application that allows students to view and sign up for extracurricular activities at Mergington High School."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"